samples/_failures_safe/1761265560_49c3e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a69391ff.c: In function ‘main’:
./samples/SAFE/__tmp_a69391ff.c:172:5: error: expected expression at end of input
  172 |     for (type =
      |     ^~~
./samples/SAFE/__tmp_a69391ff.c:172:5: error: expected declaration or statement at end of input
